--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -28,7 +28,7 @@
                 <div class="md:w-1/4 w-1/3">
                     <h3 class="text-white flex justify-center">SOCIAL</h3>
                     <ul class="flex flex-col items-start m-4">
-                        <li [routerLink]="['/']">Instagram</li>
+                        <li> <a target="_blank" href="https://www.instagram.com/slamstats_official/">Instagram</a></li>
                         <li [routerLink]="['/']">Facebook</li>
                         <li [routerLink]="['/']">X</li>
                     </ul>
