--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="">
-            <div class="mt-2 bg-primary">
+            <div class="mt-2 bg-secondary">
                 <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
             </div>
 
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="">
-            <div class="mt-2 bg-primary">
+            <div class="mt-2 bg-secondary">
                 <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
             </div>
 
