--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -91,13 +91,13 @@
                                 <p>MIN</p>
                             </th>
                             <th class="w-[15%] bg-secondary text-white border-r-4 border-white">
-                                <p>MIN</p>
+                                <p>PTS</p>
                             </th>
                             <th class="w-[15%] bg-secondary text-white border-r-4 border-white">
-                                <p>MIN</p>
+                                <p>REB</p>
                             </th>
                             <th class="w-[15%] bg-secondary text-white">
-                                <p>MIN</p>
+                                <p>AST</p>
                             </th>
                         </tr>
                     </thead>
