--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -37,11 +37,11 @@
                 </label>
             </div>
         </div>
-        <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-            REGOLAMENTO
+        <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline"  [routerLink]="['/storia&regole', 'regole']">
+            REGOLE
         </button>
-        <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-            GLOASSRIO
+        <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline" [routerLink]="['/storia&regole', 'glossario']">
+            GLOSSARIO
         </button>
     </div>
     <div class="w-full lg:h-8 h-auto lg:mt-10 mt-10 lg:mb-5 mb-4 flex flex-wrap lg:hidden justify-center" id="bottoni-classifica">
