--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="w-full h-6 bg-secondary"></div>
     </div>
-    <div class="lg:h-16 h-10">
+    <div class="lg:h-16 h-10 lg:hidden">
         <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
             <li [ngClass]="{'bg-secondary': isConferenceSelected === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isConferenceSelected === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
