--- a/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
+++ b/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
@@ -1,1 +1,8 @@
-<p>articolo-detail-page works!</p>
+<app-navbar></app-navbar>
+<section>
+    <div class="flex justify-center h-full">
+        <div class="container flex justify-center h-full">
+        </div>
+    </div>
+</section>
+<app-footer></app-footer>
