--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -3,12 +3,12 @@
         <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
             <li [ngClass]="{'bg-secondary': selectedConference === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                <button (click)="functionSelectionConference(true)" [class.text-white]="selectedConference === true" class="w-full text-center text-white lg:text-3xl">EAST CONFERENCE</button>
+                <button (click)="functionSelectionConference(true)" [class.text-white]="selectedConference === true" class="w-full text-center text-white lg:text-3xl">EASTERN CONFERENCE</button>
             </li>
 
             <!-- Secondo elemento della lista -->
             <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === true, 'bg-secondary': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                <button (click)="functionSelectionConference(false)" [class.text-white]="selectedConference === false" class="w-full text-center lg:text-3xl">WEST CONFERENCE</button>
+                <button (click)="functionSelectionConference(false)" [class.text-white]="selectedConference === false" class="w-full text-center lg:text-3xl">WESTERN CONFERENCE</button>
             </li>
         </ul>
     </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="w-1/2 flex justify-center">
                 <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-                    GLOASSRIO
+                    GLOSSARIO
                 </button>
             </div>
         </div>
