--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -2,12 +2,12 @@
     <div class="lg:h-16 h-10">
         <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
-            <li [ngClass]="{'bg-secondary': selectedConference === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+            <li [ngClass]="{'bg-secondary': selectedConference === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl  text-sm">
                 <button (click)="functionSelectionConference(true)" [class.text-white]="selectedConference === true" class="w-full text-center text-white lg:text-3xl">EASTERN CONFERENCE</button>
             </li>
 
             <!-- Secondo elemento della lista -->
-            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === true, 'bg-secondary': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === true, 'bg-secondary': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl text-sm">
                 <button (click)="functionSelectionConference(false)" [class.text-white]="selectedConference === false" class="w-full text-center lg:text-3xl">WESTERN CONFERENCE</button>
             </li>
         </ul>
