--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -11,13 +11,13 @@
     <div class="lg:h-16 h-10 lg:hidden">
         <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
-            <li [ngClass]="{'bg-secondary': isConferenceSelected === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isConferenceSelected === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                <button (click)="functionChangeConferenceSelected()" [class.text-white]="isConferenceSelected === true" class="w-full text-center text-white lg:text-3xl">EAST CONFERENCE</button>
+            <li [ngClass]="{'bg-secondary': isConferenceSelected === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isConferenceSelected === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl lg:text-xl text-sm">
+                <button (click)="functionChangeConferenceSelected()" [class.text-white]="isConferenceSelected === true" class="w-full text-center text-white lg:text-3xl">EASTERN CONFERENCE</button>
             </li>
 
             <!-- Secondo elemento della lista -->
-            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isConferenceSelected === true, 'bg-secondary': isConferenceSelected === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                <button (click)="functionChangeConferenceSelected()" [class.text-white]="isConferenceSelected === false" class="w-full text-center lg:text-3xl">WEST CONFERENCE</button>
+            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isConferenceSelected === true, 'bg-secondary': isConferenceSelected === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl lg:text-xl text-sm">
+                <button (click)="functionChangeConferenceSelected()" [class.text-white]="isConferenceSelected === false" class="w-full text-center lg:text-3xl">WESTERN CONFERENCE</button>
             </li>
         </ul>
     </div>
@@ -25,7 +25,7 @@
         <div class="container h-full flex flex-wrap justify-center">
             <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12 " *ngIf="isConferenceSelected===true && isMobile===true || isMobile===false">
                 <div class="w-full flex justify-end pb-2">
-                    <button>preferiti</button>
+                    <button></button>
                 </div>
                 <div class="hidden w-full lg:flex justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">EASTERN CONFERENCE</h2>
@@ -44,7 +44,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-auto hover:cursor-pointer">{{team.teamName}}</p>
-                                            <p class="w-[10%] hover:cursor-pointer">❤</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -64,7 +64,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-auto hover:cursor-pointer">{{team.teamName}}</p>
-                                            <p class="w-[10%] hover:cursor-pointer">❤</p>
+                                            <p class="w-[10%] hover:cursor-pointer">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -84,7 +84,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-full">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -95,7 +95,7 @@
             </div>
             <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12" *ngIf="isConferenceSelected===false && isMobile===true || isMobile===false">
                 <div class="w-full flex justify-end pb-2">
-                    <button>preferiti</button>
+                    <button></button>
                 </div>
                 <div class="hidden lg:flex w-full justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">WESTERN CONFERENCE</h2>
@@ -114,7 +114,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-full">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -134,7 +134,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-full">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -154,7 +154,7 @@
                                         </div>
                                         <div class="w-2/3 pl-4">
                                             <p class="w-full">{{team.teamName}}</p>
-                                            <p class="w-full">❤</p>
+                                            <p class="w-full">🖤</p>
                                         </div>
                                     </li>
                                 </ul>
