--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -79,7 +79,7 @@
                 <div class="rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline flex justify-center">
                     <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event);">
                         <input id="cuore" type="checkbox" />
-                        <label class="toggle-item" for="cuore">
+                        <label class="toggle-item" disabled for="cuore">
                             <div class="block-heart">
                                 <div class="heart">
                                 </div>
