--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -43,7 +43,7 @@
                     <li routerLink="/classifica"><button>CLASSIFICA</button></li>
                     <li routerLink="/calendario"><button>CALENDARIO</button></li>
                     <li routerLink="/squadre"><button>SQUADRE</button></li>
-                    <li routerLink="/storia&regole"><button>REGOLE & GLOSSARIO</button></li>
+                    <li [routerLink]="['/storia&regole','regole']"><button>REGOLE & GLOSSARIO</button></li>
                     <li routerLink="/blog"><button>BLOG</button></li>
                 </ul>
     
@@ -58,7 +58,7 @@
                     <li routerLink="/classifica"><button>CLASSIFICA</button></li>
                     <li routerLink="/calendario"><button>CALENDARIO</button></li>
                     <li routerLink="/squadre"><button>SQUADRE</button></li>
-                    <li routerLink="/storia&regole"><button>REGOLE & GLOSSARIO</button></li>
+                    <li [routerLink]="['/storia&regole','regole']"><button>REGOLE & GLOSSARIO</button></li>
                     <li routerLink="/blog"><button>BLOG</button></li>
                 </ul>
             </div>
