--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -13,7 +13,6 @@
             <div class="mt-2 bg-secondary">
                 <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
             </div>
-
             <div class="flex flex-nowrap justify-between mt-2 lg:mx-0 ml-2">
                 <div class="flex flex-nowrap">
                     <p class="text-sm flex items-center">
@@ -33,13 +32,13 @@
                     </p>
                 </div>
                 <div class="bg-secondary rounded-full text-white px-4 text-sm flex items-center">
-                    <p>Apri Articolo</p>
+                    <button class="" routerLink="/articolo">Apri Articolo</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div *ngIf="extended===true" class="hidden lg:block w-full my-5 relative">
+<div *ngIf="extended===true" class="hidden lg:block w-full my-10 relative">
     <div class="w-full flex flex-nowrap h-full">
         <div class="relative w-1/2">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
@@ -58,7 +57,7 @@
                     </div>
                     <div class="flex justify-end mr-8">
                         <div class="bg-secondary rounded-full text-white px-4 text-sm flex items-center">
-                            <p>Apri Articolo</p>
+                            <button class="" routerLink="/articolo">Apri Articolo</button>
                         </div>
                     </div>
                     <div class="flex flex-nowrap justify-evenly w-full">
@@ -121,7 +120,7 @@
                     </p>
                 </div>
                 <div class="bg-secondary rounded-full text-white px-4 text-sm flex items-center">
-                    <p>Apri Articolo</p>
+                    <button class="" routerLink="/articolo">Apri Articolo</button>
                 </div>
             </div>
         </div>
