--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -12,26 +12,26 @@
             </li>
         </ul>
     </div>
-    <div class="w-full lg:h-8 h-auto lg:mt-10 mt-10 lg:mb-5 mb-4 flex flex-wrap justify-center bottoni-classifica">
-        <div class="w-full mb-4 flex flex-nowrap">
+    <div class="w-full h-auto lg:mt-10 mt-10 lg:mb-5 mb-4 flex flex-wrap justify-center bottoni-classifica">
+        <div class="w-full mb-4 flex flex-nowrap lg:hidden">
             <div class="w-1/2 flex justify-center">
-                <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
+                <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:px-6 px-3 lg:py-1 text-sm hover:underline">
                     REGOLAMENTO
                 </button>
             </div>
             <div class="w-1/2 flex justify-center">
-                <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:ml-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
+                <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:px-6 px-3 lg:py-1 text-sm hover:underline">
                     GLOSSARIO
                 </button>
             </div>
         </div>
-        <div class="w-full flex flex-nowrap">
-            <div *ngIf="percentageStanding==true && crescente==false && ControlChecked()==false" class="w-1/2 flex justify-center ">
+        <div class="w-full flex flex-nowrap justify-end">
+            <div *ngIf="percentageStanding==true && crescente==false && ControlChecked()==false" class="w-1/2 lg:w-auto flex justify-center lg:justify-end ">
                 <div class="flex items-center rounded-full lg:px-6 px-3 lg:py-1 text-sm bg-[#BAD5E6] opacity-50 ">
                     <p>RESET FILTRI</p>
                 </div>
             </div>
-            <div *ngIf="percentageStanding==false || crescente==true || ControlChecked()==true" class="w-1/2 flex justify-center ">
+            <div *ngIf="percentageStanding==false || crescente==true || ControlChecked()==true" class="w-1/2 lg:w-auto flex justify-center lg:justify-end ">
                 <button class="rounded-full bg-[#BAD5E6] lg:px-6 px-3 lg:py-1 text-sm hover:underline" (click)="percentageStanding=true;
                     nameStanding=false;
                     crescente=false;
@@ -43,7 +43,7 @@
                     RESET FILTRI
                 </button>
             </div>
-            <div class="w-1/2 flex justify-center">
+            <div class="w-1/2 lg:w-auto flex justify-center lg:justify-end">
                 <div class="rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline">
                     <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event);">
                         <input id="cuore" type="checkbox" />
@@ -54,6 +54,20 @@
                             </div>
                         </label>
                     </div>
+                </div>
+            </div>
+            <div class="hidden lg:flex lg:w-auto ">
+                <div class="flex justify-end">
+                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-4 lg:px-6 px-3 lg:py-1 text-sm hover:underline">
+                        REGOLAMENTO
+                    </button>
+                </div>
+            </div>
+            <div class="hidden lg:flex lg:w-auto ">
+                <div class="flex justify-end">
+                    <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white  lg:px-6 px-3 lg:py-1 text-sm hover:underline">
+                        GLOSSARIO
+                    </button>
                 </div>
             </div>
         </div>
