modifiche rimozione risposta ai commenti

--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -20,7 +20,7 @@
                         <ul>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('profilo')">Profilo</li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('risultato')">Risultato Sondaggi</li>
-                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('notifiche')">Notifiche</li>
+                            <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('notifiche')">Notifiche </li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('amici')">Amici</li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('preferiti')">Preferiti</li>
                             <li class="p-5 text-2xl text-white font-bold hover:underline focus:underline" (click)="functionChangeManu('impostazioni')">Impostazioni</li>
@@ -38,6 +38,7 @@
                             <li class="p-2 text-xl font-bold">Nome</li>
                             <li class="p-2 text-xl font-bold">Età</li>
                             <li class="p-2 text-xl font-bold">Sesso</li>
+                            <li class="p-2 text-xl font-bold">1k followers</li>
                             <li class="p-2 text-xl font-bold">Data di iscrizione</li>
                             <li class="p-2 text-xl font-bold">Badge</li>
                         </ul>
