--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -6,28 +6,28 @@
             </div>
             <div class="w-full h-1/5 flex justify-between">
                 <div class="w-1/4 flex justify-center">
-                    <img class="object-contain h-full" src="https://picsum.photos/id/237/200/" alt="immagine">
+                    <img class="object-contain h-full" src={{match.logoHome}} alt="immagine">
                 </div>
                 <div class="w-2/4 flex justify-between items-center">
                     <div>
-                        <p class="text-2xl">110</p>
+                        <p class="text-2xl" *ngIf="match?.scoreTeamHome!=undefined">{{match.scoreTeamHome}}</p>
                     </div>
                     <div>
                         <p class="h-full text-4xl flex items-center p-0 m-0">-</p>
                     </div>
                     <div>
-                        <p class="text-2xl">90</p>
+                        <p class="text-2xl" *ngIf="match?.scoreTeamHome!=undefined">{{match.scoreTeamHome}}</p>
                     </div>
                 </div>
                 <div class="w-1/4 flex justify-center">
-                    <img class="object-contain h-full" src="https://picsum.photos/id/237/200/" alt="immagine">
+                    <img class="object-contain h-full" src={{match.logoAway}} alt="immagine">
                 </div>
             </div>
             <div class="w-full h-1/6 flex justify-center items-center">
                 <p class="w-full flex justify-center items-center">3:18 4°Q</p>
             </div>
             <div class="w-full h-1/4 flex flex-wrap justify-center items-center">
-                <div class="w-[75%] h-1/3 flex justify-center">{{id}}</div>
+                <div class="w-[75%] h-1/3 flex justify-center" *ngIf="match?.gameid!=undefined">{{match.gameid}}</div>
                 <div class="w-[75%] h-1/3 border-black rounded-full flex flex-nowrap justify-center">
                     <div class="w-[65%] bg-red-600 rounded-l-full"></div>
                     <div class="w-[45%] bg-blue-600 rounded-r-full"></div>
