--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="w-full h-1/5 flex justify-between">
                 <div class="w-1/4 flex justify-center">
-                    <img class="object-contain h-full" src={{match.logoHome}} alt="immagine">
+                    <img class="object-contain h-full" *ngIf="match?.logoHome!=undefined" src={{match.logoHome}} alt="immagine">
                 </div>
                 <div class="w-2/4 flex justify-between items-center">
                     <div>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="w-1/4 flex justify-center">
-                    <img class="object-contain h-full" src={{match.logoAway}} alt="immagine">
+                    <img class="object-contain h-full" *ngIf="match?.logoAway!=undefined" src={{match.logoAway}} alt="immagine">
                 </div>
             </div>
             <div class="w-full h-1/6 flex justify-center items-center">
