--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="w-full h-full border-t-4 border-white">
                             <div class="w-full flex flex-wrap justify-between">
-                                <div class="w-[30%] bg-white m-4" *ngFor="let item of jsonInfo; let i = index">{{jsonInfo[i].titolo}}</div>
+                                <div class="w-[30%] bg-white m-4" *ngFor="let _ of ripetiArray; let i = index">{{teamStatistics?.assists}}</div>
                             </div>
                         </div>
                     </div>
