--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -50,7 +50,11 @@
                             </ul>
                         </div>
                         <div class="w-full h-full border-t-4 border-white">
+                            <div class="w-full flex justify-center ">
+                                <div class="w-[90%] bg-white text-center">STATISTICHE STAGIONE:</div>
+                            </div>
                             <div class="w-full flex flex-wrap justify-between">
+                                
                                 <div class="w-[30%] bg-white m-4" *ngFor="let _ of ripetiArray; let i = index">{{teamStatistics?.assists}}</div>
                             </div>
                         </div>
