--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -28,12 +28,12 @@
                         <div class="w-1/2 h-28 border-r-2 border-white flex justify-around flex-nowrap bg-primary">
                             <div class="w-1/4 h-full flex justify-center items-center">
                                 <div class="rounded-full bg-white lg:w-24 w-12 lg:h-24 h-12">
-                                    <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
+                                    <img src="{{teamStatistics!.team.logo}}" class="object-contain h-full" alt="">
                                 </div>
                             </div>
                             <div class="w-1/2 flex lg:flex-wrap flex-wrap justify-center items-center ">
-                                <p class="lg:w-full w-full text-sm h-1/2 text-white flex items-end lg:text-3xl">NOME SQUADRA</p>
-                                <p class="lg:w-full w-full text-sm h-1/2 text-white lg:text-2xl">N pos° East Conference</p>
+                                <p class="lg:w-full w-full text-sm h-1/2 text-white flex items-end lg:text-3xl">{{teamStatistics!.team.teamName | uppercase}}</p>
+                                <p class="lg:w-full w-full text-sm h-1/2 text-white lg:text-2xl">N pos°: {{teamStatistics?.conferenceRank}} ad {{teamStatistics!.team.conferenceName}}</p>
                             </div>
                         </div>
                         <div class="w-1/2 h-28 border-l-2 border-white text-white flex flex-wrap justify-center items-center bg-primary">
@@ -49,13 +49,91 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="w-full h-full border-t-4 border-white">
+                        <div class="w-full h-auto border-t-4 border-white">
                             <div class="w-full flex justify-center ">
                                 <div class="w-[90%] bg-white text-center">STATISTICHE STAGIONE:</div>
                             </div>
                             <div class="w-full flex flex-wrap justify-between">
-                                
-                                <div class="w-[30%] bg-white m-4" *ngFor="let _ of ripetiArray; let i = index">{{teamStatistics?.assists}}</div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Partite Giocate</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.games}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Punti Segnati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.points}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri Realizzati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.fgm}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri Tentati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.fga}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Percentuale al Tiro</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.fgp}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri Liberi Segnati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.ftm}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri Liberi Tentati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.fta}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Percentuale ai Liberi</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.ftp}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri da Tre punti Segnati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.tpm}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Tiri da Tre punti Tentati</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.tpa}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Percentuale da Tre Punti</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.tpp}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Rimbalzi Offensivi</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.offReb}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Rimbalzi Difensivi</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.defReb}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Rimbalzi Totali</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.totReb}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Assists</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.assists}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Palle Rubate</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.steals}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Palle Perse</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.turnovers}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Stoppate</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.blocks}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Plus/Minus di Squadra</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.plusMinus}}</p>
+                                </div>
+                                <div class="w-[30%] flex flex-wrap m-2">
+                                    <p class="w-full flex justify-center mb-1 bg-white">Falli di Squadra</p>
+                                    <p class="w-full flex justify-center bg-white">{{teamStatistics?.pfouls}}</p>
+                                </div>
                             </div>
                         </div>
                     </div>
